Fix: staff spacing

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ button:active,
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 4rem 5rem;
+  padding: 4rem 7rem;
 }
 
 .section-4 h2 {
@@ -328,7 +328,7 @@ button:active,
   flex-direction: column;
   padding: 0 10rem;
 
-  width:90%
+  width:100%
 }
 
 .staff-member {
@@ -667,6 +667,10 @@ footer {
 
   .section-3 h3 {
     font-size: 12vh; /* Adjust font size */
+  }
+
+  .staff {
+    width: 160%;
   }
 
   .see-more {
